--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,9 @@
 MONGODB_URI='mongodb+srv://dbadmin:PraWaMa-9889@cluster0.n5gpj0e.mongodb.net/NextCommerce?retryWrites=true&w=majority'
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your_secret_here
+ENCRYPTION_KEY=your_encryption_key
 GOOGLE_CLIENT_ID=838778019876-614o9af4rk7n3vq685akfgaj2567fsc0.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GITHUB_CLIENT_ID=1556b1534a9707f2bf94
